2009-07-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_wireless_chooser.c (nwam_compose_wifi_chooser_view),
	(nwam_wireless_chooser_init), (nwam_wifi_scan_start): Fixed runtime
	critical warnings and dup wlan items.
	* common/nwamui_daemon.h:
	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_set_property), (find_compare_wifi_net_with_name),
	(dispatch_scan_results_if_wireless): Remove daemon status signal, uses
	status notify instead.
	* common/nwamui_ncp.c (nwamui_ncp_new_with_handle):
	* common/nwamui_ncu.c (populate_ip_ncu_data),
	(nwamui_ncu_wifi_hash_insert_or_update_from_handle):
	* common/nwamui_wifi_net.c (nwamui_wifi_net_update_with_handle):
	Fixed some mem leak.
	* daemon/status_icon.c (daemon_status_changed),
	(nwam_menu_scan_started), (daemon_active_ncp_changed),
	(daemon_active_env_changed), (connect_nwam_object_signals),
	(nwam_status_icon_run), (status_icon_popup),
	(activate_test_menuitems), (enable_sync_wifi_signals_func),
	(nwam_menu_enable_sync_wifi_signals_timer): Delay sync wifi menuitems
	when pop menu is visible.

2009-07-02  Lin Ma  <Lin.Ma@Sun.COM>

	* common/Makefile.am: Clean code for 'make dist'.

2009-07-01  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: 
	  Changed dispatch_scan_results_from_wlan_array to first sort the list
	  of wlans by signal strength before dispatching, this ensures that
	  the strongest signal is shown in the menus.
	  Modified nwamui_daemon_populate_wifi_fav_list
	  and events to ensure that  they are using cached WifiNet objects
	  rather than creating their own - removes the chances of duplicate
	  entries occuring.
	* common/nwamui_env.c: 
	  In nwamui_env_update_with_handle() ensure that the nwam_loc handle
	  is NULL if failed to read from the system.
	* common/nwamui_ncp.h, common/nwamui_ncp.c: 
	  Add function nwamui_ncp_get_wireless_ncus() to enable easy fetching
	  of the wireless ncus in a given NCP.
	* common/nwamui_ncu.h, common/nwamui_ncu.c: